[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orax"
version = "0.1.0"
authors = [{ name = "Yicheng Luo", email = "ethanluoyc@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"

[tool.black]
line-length = 88
target-version = ["py39", "py310"]

[tool.ruff]
select = ["E", "F", "I"]
exclude = ["venv", "third_party"]
target-version = "py39"
line-length = 120
ignore = ["E731"]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["orax"]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["orax"]
filterwarnings = [
  "ignore:.*pkg_resources.*:DeprecationWarning",
  "ignore:.*distutils.*:DeprecationWarning",
  "ignore:.*jax\\.xla.*:DeprecationWarning",
]
